Enhance `DoctorAvailabilityService` to generate available time slots and add conflict checks
Implemented logic to create doctor-specific time slots excluding overlaps with existing appointments. Added methods to check for overlapping availabilities during creation or updates to ensure schedule validity.